--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,73 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    background-color: #fff;
+    font-size: 14px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container {
+    max-width: 1440px;
+    width: 95%;
+    margin: auto;
+}
+
+/* Resets */
+.btn:focus {
+    box-shadow: none !important;
+}
+
+
+/* Utilities */
+.transition {
+    transition: 0.4s;
+}
+
+.pri-color {
+    color: #102252;
+}
+
+.btn {
+    transition: 0.4s !important;
+}
+
+.btn-block-pri {
+    border: solid 1px #102252 !important;
+    background-color: #102252 !important;
+    color: #fff !important;
+}
+
+.btn-inline-pri,
+.btn-block-pri:hover  {
+    border: solid 1px #102252 !important;
+    color: #102252 !important;
+    background-color: transparent !important;
+}
+
+.btn-inline-pri:hover {
+    background-color: #102252 !important;
+    color: #fff !important;
+}
+
+
+.btn-block-light,
+.btn-inline-light:hover {
+    border: solid 1px #fff !important;
+    background-color: #fff !important;
+    color: #1b1b1b !important;
+}
+.btn-inline-light {
+    border: solid 1px #fff !important;
+    background-color: transparent;
+    color: #fff !important;
+}
+
+
+.btn-block-light:hover {
+    background-color: transparent !important;
+    color: #fff !important;
+}
+
+
+
+a:hover {
+    opacity: 0.7;
+    transition: 0.4s;
 }
