--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+
 body {
     background-color: #fff;
     font-size: 14px;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .container {
@@ -70,4 +73,9 @@ body {
 a:hover {
     opacity: 0.7;
     transition: 0.4s;
+}
+
+.heading{
+    font: "";
+    
 }
