--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,10 +1,12 @@
 /* Home */
 
-#home {
+#home,
+.hero-bg2 {
     position: relative;
 }
 
-#home::before {
+#home::before,
+.hero-bg2::before {
     content: "";
     position: absolute;
     left: 0;
@@ -12,21 +14,44 @@
     width: 100%;
     height: 100%;
     background-color: #000;
-    opacity: 0.3;
+    opacity: 0.4;
+}
+
+.hero-container {
+    padding-top: 120px !important;
 }
 
 .hero {
-    background:url("../../images/home/hero_bg.png") center center/cover no-repeat;
     width: 100%;
-    min-height: fit-content;
+    min-height: 100vh;
     color: #fff;
-    padding-top: 120px;
     padding-bottom: 20px;
+}
+
+.swiper {
+    z-index: -1;
+}
+
+.hero-bg {
+    width: 100%;
+    height: 100%;
+}
+
+.hero-bg1{
+    background:url("../../images/home/hero_bg.png") center center/cover no-repeat;
     background-position-x: left;
+}
+
+.hero-bg2 {
+    background-color: #1b1b1b;
 }
 
 .hero-content {
     max-width: 391px;
+}
+
+.animation-coin {
+    object-fit: cover;
 }
 
 
@@ -51,8 +76,16 @@
 .action-btns {
     display: flex;
     align-items: center;
+    justify-content: center;
     flex-wrap: wrap;
     grid-gap: 20px;
+}
+
+
+/* Marquee */
+.marquee {
+    background-color: #102252;
+    color: #fff;
 }
 
 /* Opportunity Section */
@@ -121,6 +154,16 @@
 
 @media (max-width: 768px) {
     .hero {
-        background-position-x: 30%;
+        min-height: fit-content;
     }
+
+    .hero-bg1 {
+        background-position-x: 30%;  
+    }
+
+    .swiper2{
+        display: block !important;
+    }
+
+    
 }
