--- a/src/pages/Invest/invest.css
+++ b/src/pages/Invest/invest.css
@@ -1,6 +1,7 @@
 .invest-hero {
     background: url("../../images/invest/invest_hero.jpeg") center center/cover no-repeat;
-    height: 100vh;
+    min-height: 100vh;
+    padding-bottom: 20px;
     position: relative;
 }
 
