--- a/src/pages/Sup/Sup.css
+++ b/src/pages/Sup/Sup.css
@@ -1,6 +1,7 @@
 .sup-hero {
     background: url("../../images/sup/sup-hero.jpeg") center center/cover no-repeat;
-    height: 100vh;
+    min-height: 100vh;
+    padding-bottom: 20px;
     position: relative;
 }
 
@@ -19,6 +20,7 @@
 .hero-context {
     z-index: 1;
     max-width: 800px;
+    padding-top: 135px !important;
 }
 
 #sup .hero-context h1 {
