--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,32 +1,6 @@
 /* Home */
-
 #home {
     position: relative;
-}
-
-#home::before {
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #000;
-    opacity: 0.4;
-}
-
-.hero-container {
-    padding-top: 135px !important;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.hero {
-    width: 100%;
-    min-height: 100vh;
-    padding-bottom: 20px;
-    color: #fff;
 }
 
 .swiper {
@@ -38,7 +12,7 @@
     height: 100%;
 }
 
-.hero-bg1{
+#home .hero-bg1 {
     background:url("../../images/home/hero_bg.png") center center/cover no-repeat;
     background-position-x: left;
 }
@@ -47,7 +21,7 @@
     background-color: #1b1b1b;
 }
 
-.hero-content {
+#home .hero-context {
     max-width: 391px;
 }
 
@@ -58,11 +32,6 @@
 
 
 /* Welcome Section */
-
-.welcome {
-    margin-top: 35px;
-}
-
 .welcome-container {
     max-width: 619px;
     text-align: center;
@@ -90,21 +59,13 @@
 }
 
 /* Opportunity Section */
-.opportunity {
+#opportunity {
     background: url("../../images/home/opportunity.png") center center/cover no-repeat;
     min-height: 480px;
-    margin-top: 41px;
 }
 
-.access, 
-.subcoin {
-    margin-top: 85px;
-}
 
-.access img {
-    width: 100%;
-}
-
+/* Acesss */
 .access-gallery {
     margin-top: 132px;
 }
@@ -113,34 +74,25 @@
     border: solid 1px #102252;
 }
 
-
 .access-gallery h6 {
     font-weight: 700;
     margin-top: 10px;
 }
 
-
 /* News Letter */
-.newletter {
+#newsletter {
     background: linear-gradient(90deg, #102252 32.81%, rgba(16, 34, 82, 0.00) 100%);
     min-height: 333px;
-    margin-top: 82px;
     color: #fff;
     display: flex;
     align-items: center;
 }
 
-/* Supelle */
-.supelle {
-    margin-top: 32px;
-}
 
 /* Watch Video */
-.watch-video {
+#watch-video {
     min-height: 685px;
     background: url("../../images/home/video.png") center center/cover no-repeat;
-    margin-top: 47px;
-    padding: 30px 0px;
 }
 
 .video-content {
@@ -153,11 +105,8 @@
     background-color: #102252;
 }
 
-@media (max-width: 768px) {
-    .hero {
-        min-height: fit-content;
 
-    }
+@media (max-width: 768px) {
 
     .hero-bg1 {
         background-position-x: 30%;  
@@ -165,7 +114,5 @@
 
     .swiper2{
         display: block !important;
-    }
-
-    
+    } 
 }
