--- a/src/pages/Sup/Sup.css
+++ b/src/pages/Sup/Sup.css
@@ -1,58 +1,17 @@
-.sup-hero {
+#sup .hero {
     background: url("../../images/sup/sup-hero.jpeg") center center/cover no-repeat;
-    min-height: 100vh;
-    padding-bottom: 20px;
-    position: relative;
 }
 
-.revolution::after,
-.sup-hero::before {
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #000;
-    opacity: 0.3;
-}
 
-.hero-context {
-    z-index: 1;
-    max-width: 800px;
-    padding-top: 200px !important;
-}
-
-#sup .hero-context h1 {
-    font-weight: 400;
-    font-size: 3.5rem;
-}
-
-.hero-caption {
-    font-weight: 400;
-}
-
-.revolution {
+#revolution {
     background: url('../../images/sup/revolution-bg.jpg') center center/cover no-repeat;
-    position: relative;
-}
-
-.revolution::after {
-    background-color: rgba(0,0,0,0.5) !important;
-}
-
-.revolution .row {
-    z-index: 1;
+    color: #fff;
     position: relative;
 }
 
 
-@media (max-width: 756px) {
-    #sup .hero-title {
-        font-size: 2.5rem;
-    }
-
-    #sup .hero-caption {
-        font-size: 1.2rem;
-    }
+.sup-image {
+    border-radius: 50px;
+    overflow: hidden;
+    
 }
