--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -10,10 +10,15 @@
     padding: 5px;
     font-weight: 500;
     background-color: rgba(0, 0, 0, 0.4);
+    
 }
 
-#navbar .nav-link {
+#navbar .nav-link,
+#navbar .btn {
     color:#fff;
+    font-family: Helvetica, sans-serif;
+    font-weight: 400;
+    font-size: 14px;
 }
 
 .navbar-container {
@@ -24,6 +29,12 @@
 
 .main-nav {
     display: flex;
+}
+
+.dropdown .nav-link {
+    font-size: 18px !important;
+    font-weight: 400 !important;
+    line-height: 30px !important;
 }
 
 .dropdown-btn {
@@ -134,9 +145,13 @@
 /* Footer */
 .footer {
     background-color: #102252;
-    padding: 35px 0px;
+    padding: 30px 0px 20px 30px;
 }
 
 .footer a {
     color: #fff;
+    font-weight: 400;
+    font-size: 12.8px;
+    font-family: Helvetica, sans-serif;
+    margin-bottom: 14.4px;
 }
