--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -1,36 +1,249 @@
 #about .hero {
-    background: url("../../images/about/about-hero.jpeg") center center/cover no-repeat;
+  background: url("../../images/about/about-hero.jpeg") center center/cover
+    no-repeat;
 }
 
 #about .hero .overlay {
-    background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+#about #supelle-info {
+  padding: 0 !important;
 }
 
 #info {
-    background: url("../../images/roadmap/coin-bg.jpg") center center/cover no-repeat;
+  background: url("../../images/roadmap/coin-bg.jpg") center center/cover
+    no-repeat;
 }
 
 #info .lead {
-    font-weight: 400;
+  font-weight: 400;
 }
 
-.info-image { 
-    max-width: 300px;
-    margin-inline: auto;
+.info-image {
+  max-width: 300px;
+  margin-inline: auto;
 }
 
 #story {
-    background: url("../../images/about/story.jpeg") center center/cover no-repeat fixed; 
-    position: relative;
+  background: url("../../images/about/story.jpeg") center center/cover no-repeat
+    fixed;
+  position: relative;
 }
 #story .overlay {
-    background-color: rgba(0,0,0,0.6);
+  background-color: rgba(0, 0, 0, 0.6);
 }
 #story .text-light {
-    position: relative;
-    z-index: 1;
+  position: relative;
+  z-index: 1;
 }
 
+
+.about-team {
+    max-width: 400px;
+    margin-inline: auto;
+    padding-block: 30px;
+    
+}
+
+.members {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(180px, auto));
+
+}
+
+
+
+.member {
+  min-height: 200px;
+  position: relative;
+  overflow: hidden;
+}
+
+.member-image img {
+  transition: 0.4s;
+}
+
+.img-cover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  text-align: center;
+  color: #fff;
+  transition: 0.4s;
+  opacity: 0;
+  backdrop-filter: blur(1px);
+}
+
+.member:hover .member-image img {
+  transform: scale(1.1);
+}
+
+.member:hover .img-cover {
+  opacity: 1;
+}
+
+.img-cover .icon {
+  border: solid 2px #ccc;
+  padding: 5px;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  animation: info 1s infinite alternate;
+  transition: 0.4s;
+  cursor: pointer;
+}
+
+.img-cover .icon:hover {
+  color: #7499fe;
+  border-color: #7499fe;
+}
+
+
+.team-modal {
+  position: fixed;
+  z-index: 10000;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  backdrop-filter: blur(3px);
+  opacity: 0;
+  transform: scale(0);
+  transition: 0.4s;
+}
+
+
+.team-modal .hide {
+  color: #1b1b1b;
+  font-size: 1.7rem;
+  position: absolute;
+  top: 20px;
+  right: 50px;
+}
+
+.member-info {
+  background-color: #fff;
+  max-width: 900px;
+  width: 95%;
+}
+
+.team-context-container {
+  padding: 30px !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.team-info-context {
+  overflow-y: scroll;
+  max-height: 140px;
+  padding-right: 20px;
+}
+
+.team-info-context p {
+  font-size: 14px;
+}
+
+.modal-image,
+.modal-image img {
+  margin-inline: auto;
+  height: 100%;
+}
+
+/* Scroll Bar styling */
+.member-info ::-webkit-scrollbar {
+  width: 10px;
+  margin-left: 10px;
+}
+
+.member-info ::-ms-scrollbar {
+  width: 10px;
+  margin-left: 10px;
+}
+
+.member-info ::-moz-scrollbar {
+  width: 10px;
+  margin-left: 10px;
+}
+
+.member-info ::-moz-scrollbar-track {
+  background-color: #cccc;
+  border-radius: 10px;
+}
+
+.member-info ::-webkit-scrollbar-track {
+  background-color: #cccc;
+  border-radius: 10px;
+}
+
+.member-info ::-moz-scrollbar-track {
+  background-color: #cccc;
+  border-radius: 10px;
+}
+
+.member-info ::-webkit-scrollbar-thumb {
+  background-color: #333;
+  border-radius: 10px;
+}
+
+.member-info ::-moz-scrollbar-thumb {
+  background-color: #333;
+  border-radius: 10px;
+}
+
+.member-info ::-ms-scrollbar-thumb {
+  background-color: #333;
+  border-radius: 10px;
+}
+
+.toggle-modal {
+    transform: scale(1);
+    opacity: 1;
+}
+
+@keyframes info {
+  0% {
+    transform: scale(0.8);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
+
+
 .mb {
-    margin-top: 5rem ;
+  margin-bottom: 5rem;
+}
+
+#position {
+  background-color: #2A3F7C;
+}
+
+@media (max-width: 576px) {
+  .member-info {
+    max-width: 400px;
+  }
+
+  .team-info-context {
+    position: static;
+  }
+
+  .modal-image img {
+    height: 300px;
+  }
+  .team-modal .hide {
+    top: -35px;
+    color: #fff;
+    right: 0;
+  }
 }
