--- a/src/pages/Invest/invest.css
+++ b/src/pages/Invest/invest.css
@@ -30,16 +30,27 @@
 }
 
 .custom-card {
-    background-color: #fff;
-    border-radius: 10px;
-    padding: 1rem;
+    border-left: solid 1px #1b1b1b;
+    padding-left: 1rem;
+    position: relative;
+    
 }
+
 
 .card-image
  {
-    width: 120px;
-    height: 120px;
-    margin-inline: auto;
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    left: -9px;
+
+}
+
+.card-image.top {
+   bottom: -100px;
+}
+.card-image.bot {
+   top: -100px;
 }
 
 .card-image img,
@@ -54,11 +65,17 @@
 .slider .swiper {
     z-index: 0;
     padding-bottom: 20px;
-    max-width: 850px;
+
+}
+
+.swiper-pagination-bullet {
+    max-width: 100px;
+    width: 100%;
+    border-radius: 0px;
 }
 
 .investment {
-    background: url("../../images/invest/investment.jpeg") center center/cover no-repeat;
+    background: url("../../images/invest/investment.jpeg") center center/cover no-repeat fixed;
     color: #fff;
     padding: 30px 0;
     position: relative;
@@ -97,7 +114,7 @@
 }
 
 #create-token {
-    background: url("../../images/invest/revolution.jpeg") center center/cover no-repeat;
+    background: url("../../images/invest/revolution.jpeg") center center/cover no-repeat fixed;
     width: 100%;
     height: 100%;
     color: #fff;
@@ -105,9 +122,22 @@
 }
 
 
+#letstoken {
+    background-color: #1e3b8c;
+}
+
+
+
+
 
 @media (max-width: 576px) {
     #invest .hero-title {
         font-size: 2.5rem;
+    }
+}
+
+@media (max-width: 767px) {
+    .card-image.top {
+        top: -70px;
     }
 }
