--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -1,157 +1,204 @@
 /* Navigation Bar */
 #navbar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    color: #fff;
-    z-index: 100;
-    backdrop-filter: blur(5px);
-    padding: 5px;
-    font-weight: 500;
-    background-color: rgba(0, 0, 0, 0.4);
-    
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  color: #fff;
+  z-index: 100;
+  font-weight: 500;
+  background-color: rgba(16, 34, 82, 0.7);
+  backdrop-filter: blur(3px);
+}
+
+#navbar .container-fluid {
+    max-width: 1650px !important;
 }
 
 #navbar .nav-link,
 #navbar .btn {
-    color:#fff;
-    font-family: Helvetica, sans-serif;
-    font-weight: 400;
-    font-size: 14px;
+  color: #fff;
+  font-family: Helvetica, sans-serif;
+  font-weight: 400;
+  font-size: 14px;
 }
 
 .navbar-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .main-nav {
-    display: flex;
+  display: flex;
+  margin-left: 2rem;
+
+
+}
+
+.main-nav .nav-link {
+  border-bottom: 4px solid transparent;
+  padding-bottom: 5px !important;
+}
+
+.main-nav .nav-link:hover {
+  border-bottom-color: #517cf0;
+  opacity: 1 !important;
 }
 
 .dropdown .nav-link {
-    font-size: 18px !important;
-    font-weight: 400 !important;
-    line-height: 30px !important;
+  font-size: 16px !important;
+  font-weight: 400 !important;
+  line-height: 30px !important;
+  border: none;
 }
 
 .dropdown-btn {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    cursor: pointer;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
 }
 
 .dropdown-items {
-    list-style: none;
-    background-color: #102252;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    /* margin-top: 5px; */
-    transition: 0.2s;
-    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.5);
-    border-bottom: 0.1px solid rgba(147, 147, 147, 0.7);
-    transform: translateY(40px);
-    visibility: hidden;
-    opacity: 0;
-    padding: 20px;
-    backdrop-filter: blur(3px);
-    z-index: 2;
+  list-style: none;
+  background-color: #102252;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  /* margin-top: 5px; */
+  transition: 0.2s;
+  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.5);
+  border-bottom: 0.1px solid rgba(147, 147, 147, 0.7);
+  opacity: 0;
+  transform: translate(0, 10px);
+  transition: opacity 200ms ease-in, transform 200ms ease-in,
+    visibility 200ms ease-in;
+  padding: 20px;
+  backdrop-filter: blur(3px);
+  z-index: 2;
+  visibility: hidden;
 }
+
 
 .dropdown-container {
-    max-width: 1000px;
-    margin: 0 auto !important;
-    padding: 30px 0;
+  max-width: 1300px;
+  margin: 0 auto !important;
+  padding: 30px 0;
 }
 
-
 .dropdown-item {
-    color: #fff !important;
+  color: #fff !important;
+}
+
+.close {
+    display: none;
 }
 
 .dropdown-item:hover {
     background-color: transparent !important;
-}
+  }
+
 
 .toggler {
-    display: none;
+  display: none;
 }
 
-.drop {
+@media (min-width: 1201px) {
+  .drop1:hover .dropdown-items,
+  .drop2:hover .dropdown-items {
     opacity: 1;
     transform: translateY(0);
     visibility: visible;
+  }
+
+  
+ 
 }
 
-.rotate {
+@media (max-width: 1200px) {
+  .main-nav {
+    position: absolute;
+    display: block;
+    top: 100%;
+    left: 0;
+    background: #fff;
+    color: #1b1b1b;
+    width: 100%;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.5);
+    transform: translateX(-105%);
+    transition: 0.4s;
+    margin-left: 0;
+  }
+
+  .dropdown-items {
+    top: 0;
+    width: 100%;
+  }
+
+  .main-nav .nav-link {
+    color: #1b1b1b !important ;
+    border-bottom: none;
+  }
+  .main-nav .icon {
+    color: #1b1b1b !important;
+  }
+
+  .nav-link.dropdown-item {
+    color: #fff !important;
+  }
+
+  .toggler {
+    display: block;
+  }
+  .visible {
+    transform: translateX(0) ;
+  }
+
+  .drop {
+    opacity: 1;
+    transform: translateY(0);
+    visibility: visible;
+  }
+
+  .rotate {
     transform: rotate(90deg);
-}
+  }
 
-.close {
+  .close {
     color: #fff !important;
     position: absolute;
     top: 0;
     right: 10px;
     padding: 5px;
+    display: block;
    
+  }
 }
-
-@media (max-width: 1200px) {
-    .main-nav {
-        position: absolute;
-        display: block;
-        top: 100%;
-        left: 0;
-        background: #fff;
-        color: #1b1b1b;
-        width: 100%;
-        box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.5);
-        transform: translateX(-105%);
-        transition: 0.4s;
-    }
-
-    .dropdown-items {
-        top: 0;
-        width: 100%;
-    }
-
-    .main-nav .nav-link {
-        color: #1b1b1b !important ;
-    }
-    .main-nav .icon {
-        color: #1b1b1b !important;
-    }
-
-    .nav-link.dropdown-item {
-        color: #fff !important;
-    }
-
-    .toggler {
-        display: block;
-    }
-    .visible {
-        transform: translateX(0);
-    }
-}
-
 
 /* Footer */
 .footer {
-    background-color: #102252;
-    padding: 30px 0px 20px 30px;
+  background-color: #102252;
+  padding: 30px 0px 20px 30px;
 }
 
 .footer a {
+  color: #fff;
+  font-weight: 400;
+  font-size: 12.8px;
+  font-family: Helvetica, sans-serif;
+  margin-bottom: 14.4px;
+}
+
+.social-link {
     color: #fff;
-    font-weight: 400;
-    font-size: 12.8px;
-    font-family: Helvetica, sans-serif;
-    margin-bottom: 14.4px;
+    font-size: 1.5rem;
+    margin-right: 17px;
+}
+
+.footer-links {
+    max-width: 1200px !important;
 }
