--- a/src/pages/NewToCrypto/NewToCrypto.css
+++ b/src/pages/NewToCrypto/NewToCrypto.css
@@ -3,6 +3,11 @@
     color: #fff;
 }
 
+.newtocryto-containerr {
+    max-width: 800px;
+    margin-inline: auto;
+}
+
 #newtocrypto .overlay {
     background-color: rgba(0,0,0,0.6);
 }
@@ -64,7 +69,7 @@
 
 .form-input:focus::-webkit-input-placeholder, .text:valid::-webkit-input-placeholder {
   color: rgba(255, 255, 255, 0.7);
-  font-size: .9em;
+  font-size: 14px;
   -webkit-transform: translateY(-30px);
   -moz-transform: translateY(-30px);
   -o-transform: translateY(-30px);
