--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -9,6 +9,7 @@
   font-weight: 500;
   background-color: rgba(16, 34, 82, 0.7);
   backdrop-filter: blur(3px);
+  transition: 0.4s;
 }
 
 #navbar .container-fluid {
@@ -105,6 +106,10 @@
 
 .toggler {
   display: none;
+}
+
+.removeBg {
+  background-color: transparent !important;
 }
 
 @media (min-width: 1201px) {
