--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -7,8 +7,6 @@
   color: #fff;
   z-index: 100;
   font-weight: 500;
-  background-color: rgba(16, 34, 82, 0.7);
-  backdrop-filter: blur(3px);
   transition: 0.4s;
 }
 
@@ -79,7 +77,6 @@
   transition: opacity 200ms ease-in, transform 200ms ease-in,
     visibility 200ms ease-in;
   padding: 20px;
-  backdrop-filter: blur(3px);
   z-index: 2;
   visibility: hidden;
 }
@@ -109,7 +106,8 @@
 }
 
 .removeBg {
-  background-color: transparent !important;
+  background-color: rgba(16, 34, 82, 0.7) !important;
+  backdrop-filter: blur(5px);
 }
 
 @media (min-width: 1201px) {
