--- a/src/pages/Invest/invest.css
+++ b/src/pages/Invest/invest.css
@@ -13,11 +13,23 @@
 #invest .hero-heading {
     font-size: 4rem;
 }
+
+#normal .container {
+    overflow: visible !important;
+}
+
+.normal-item {
+    margin-top: 1.5rem;
+}
 .normal-image {
-    height: 40px;
-    width: 40px;
-    margin-right: 15px;
+    height: 30px;
+    width: 30px;
+    margin-right: 30px;
     
+}
+
+.normal-image-slider {
+    transform: 0.4s;
 }
 
 
@@ -77,9 +89,16 @@
 }
 
 .swiper-pagination-bullet {
-    max-width: 100px;
+    max-width: 60px;
     width: 100%;
     border-radius: 0px;
+    height: 3px;
+}
+
+.swiper-button-next::after,
+.swiper-button-prev::after {
+    font-size: 1.8rem;
+    font-weight: 700;
 }
 
 .investment {
@@ -135,7 +154,52 @@
 }
 
 
+.token-circle {
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    border: solid 3px #102252;
+    border-radius: 50%;
+    left: -14px;
+    top: 0px;
+    background-color: #fff;
+    padding: 2px;
+    
+}
 
+.inner-circle {
+    height: 100%;
+    width: 100%;
+    background-color: #102252;
+    border-radius: 50%;
+}
+
+.token-heading {
+    flex: 1;
+    padding: 0px 0px 10px 30px;
+}
+.token-text {
+    position: relative;
+    border-left: solid 3px #fff;
+    flex: 1.8;
+    padding: 0px 0px 10px 30px;
+    margin-bottom: 0;
+    
+}
+
+.token-text:last-child {
+    border: none;
+}
+
+
+
+/* Let Token form */
+#letstoken .form-control {
+    background-color: rgba(0,0,0,0.3);
+    height: 50px;
+    border: solid 1px rgba(255, 255, 255, 0.3);
+    color: #fff;
+}
 
 
 @media (max-width: 576px) {
