--- a/src/pages/Sup/Sup.css
+++ b/src/pages/Sup/Sup.css
@@ -1,13 +1,8 @@
 #sup .hero {
-    background: url("../../images/sup/sup-hero.jpeg") center center/cover no-repeat;
-    min-height:75vh !important;
+    background: url("../../images/sup/sup-hero.jpeg") center center/cover no-repeat
 }
 
 
-
-#sup .sup-container {
-    min-height: 75vh !important;
-}
 
 
 #revolution {
@@ -17,13 +12,24 @@
 }
 
 
+.membership-image {
+    background: url('../../images/sup/membership.jpg') center center/cover no-repeat;
+}
+
+
+.member-padding {
+    padding-block: 100px;
+}
+
 .sup-image {
-    border-radius: 50px;
+    /* border-radius: 50px; */
     overflow: hidden;
-    max-width: 450px;
+    /* max-width: 450px; */
     
 }
 
-#sup #backdoor {
-    padding-top: 0rem !important;
+
+
+.sub-context {
+    max-width: 700px;
 }
