--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -115,10 +115,9 @@
   backdrop-filter: blur(5px);
 }
 
-.drop1:hover .dropdown-items,
-.drop2:hover .dropdown-items {
+.drop {
   opacity: 1;
-  transform: translateY();
+  transform: translateY(0);
   visibility: visible;
 }
 
