--- a/src/pages/HowToBuy/HowToBuy.css
+++ b/src/pages/HowToBuy/HowToBuy.css
@@ -6,6 +6,19 @@
     max-width: 600px;
 }
 
+.buytoken-bg {
+    background: url("../../images/howtobuy/BuyingtheSup.jpeg") center center/cover no-repeat;
+}
+
+.buytoken-bg #buy-token {
+    z-index: 1;
+    position: relative;
+}
+
+.buytoken-bg .overlay {
+    background-color: rgba(255, 255, 255, 0.8) !important;
+
+}
 
 .accordion-slider {
     margin: 80px 0;
