--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -102,9 +102,9 @@
 }
 
 .video {
-    max-width: 549px;
-    height: 288px;
-    background-color: #102252;
+    max-width: 560px;
+    height: 315px;
+    background-color: #2A3F7C;
 }
 
 
