--- a/src/index.css
+++ b/src/index.css
@@ -68,9 +68,6 @@ a:hover {
   box-shadow: none;
 }
 
-ul {
-  list-style: none;
-}
 
 /* ===================== */
 
@@ -80,7 +77,7 @@ ul {
 }
 
 .pri-color {
-  color: var(--pri-color);
+  color: var(--pri-color) !important;
 }
 .pri-light-color {
   color: var(--pri-light-color);
@@ -140,7 +137,9 @@ ul {
   color: #fff;
 }
 
-
+.swiper {
+  z-index: 1 !important;
+}
 
 
 /* ==================== */
