--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -5,7 +5,7 @@
   left: 0;
   width: 100%;
   color: #fff;
-  z-index: 100;
+  z-index: 1000;
   font-weight: 500;
   transition: 0.4s;
 }
@@ -158,6 +158,7 @@
 
   .toggler {
     display: block;
+    cursor: pointer;
   }
   .visible {
     transform: translateX(0) ;
