--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -7,9 +7,6 @@
   background-color: rgba(0, 0, 0, 0.5);
 }
 
-#about #supelle-info {
-  padding: 0 !important;
-}
 
 #info {
   background: url("../../images/roadmap/coin-bg.jpg") center center/cover
@@ -50,11 +47,6 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
 
-}
-
-.members-b {
-  display: grid;
-  grid-template-columns: repeat(6, 1fr) !important;
 }
 
 
@@ -112,20 +104,20 @@
 
 
 .team-modal {
-  position: fixed;
   z-index: 10000;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.8);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   display: flex;
   justify-content: center;
   align-items: center;
-  backdrop-filter: blur(3px);
   opacity: 0;
   visibility: hidden;
   transition: 0.4s;
+  width: 100%;
+  max-width: 1200px;
+  
 }
 
 
@@ -139,8 +131,8 @@
 
 .member-info {
   background-color: #fff;
-  max-width: 900px;
   width: 95%;
+  height: 100%;
 }
 
 .team-context-container {
@@ -152,8 +144,8 @@
 }
 
 .team-info-context {
-  overflow-y: scroll;
-  max-height: 140px;
+  overflow-y: auto;
+  max-height: 200px;
   padding-right: 20px;
 }
 
@@ -165,50 +157,60 @@
 .modal-image img {
   margin-inline: auto;
   height: 100%;
+  min-height: 400px;
 }
 
 /* Scroll Bar styling */
 .member-info ::-webkit-scrollbar {
+  
   width: 10px;
   margin-left: 10px;
 }
 
 .member-info ::-ms-scrollbar {
+  
   width: 10px;
   margin-left: 10px;
 }
 
 .member-info ::-moz-scrollbar {
+  
   width: 10px;
   margin-left: 10px;
 }
 
 .member-info ::-moz-scrollbar-track {
+  
   background-color: #cccc;
   border-radius: 10px;
 }
 
 .member-info ::-webkit-scrollbar-track {
+  
   background-color: #cccc;
   border-radius: 10px;
 }
 
 .member-info ::-moz-scrollbar-track {
+  
   background-color: #cccc;
   border-radius: 10px;
 }
 
 .member-info ::-webkit-scrollbar-thumb {
+  
   background-color: #333;
   border-radius: 10px;
 }
 
 .member-info ::-moz-scrollbar-thumb {
+  
   background-color: #333;
   border-radius: 10px;
 }
 
 .member-info ::-ms-scrollbar-thumb {
+  
   background-color: #333;
   border-radius: 10px;
 }
@@ -233,6 +235,7 @@
 .demo2 {
   color: #4A5EC0;
   background-color: #F5FFB6;
+  height: 100% !important;
 }
 
 @keyframes info {
